--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.2",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
     "svelte": "^4.2.11",
     "svelte-check": "^3.6.4",
+    "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
+  },
+  "dependencies": {
+    "@splidejs/svelte-splide": "^0.2.9"
   }
 }
