--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/node": "^20.11.24",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "postcss": "^8.4.35",
     "svelte": "^4.2.11",
     "svelte-check": "^3.6.4",
