--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.1.1",
+    "@sveltejs/adapter-auto": "^3.2.0",
+    "@sveltejs/adapter-vercel": "^5.2.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.2",
     "@types/node": "^20.11.24",
@@ -30,6 +31,7 @@
     "@splidejs/svelte-splide": "^0.2.9",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
-    "next": "^14.0.4"
+    "next": "^14.0.4",
+    "svelte-routing": "^2.12.0"
   }
 }
